--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
   android-debug:
     name: Android Debug APK
     max_build_duration: 120
-    instance_type: linux_x2
+    instance_type: linux   # Free plan compatible
 
     environment:
       java: 17
