--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,23 +2,31 @@ workflows:
   android-debug:
     name: Android Debug APK
     max_build_duration: 120
-    instance_type: linux   # Free plan compatible
-
+    instance_type: mac_mini_m1   # Free plan compatible
     environment:
-      java: 17
+      android_signing:
+        - keystore_reference
+      groups:
+        - google_play
       vars:
-        ANDROID_SDK_ROOT: /opt/android-sdk
-
+        PACKAGE_NAME: "com.yourapp.name"  # Replace with your actual package name
+      node: 18
+      java: 17
     scripts:
       - name: Install dependencies
         script: |
           npm install
-
+      - name: Set up local.properties
+        script: |
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
       - name: Build Android APK
         script: |
           cd android
           chmod +x gradlew
           ./gradlew assembleDebug
-
     artifacts:
       - android/app/build/outputs/apk/debug/app-debug.apk
+    publishing:
+      email:
+        recipients:
+          - your-email@example.com  # Replace with your email
