refactor: Update project name and styles for vibedownloader-android

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VibeDownloaderMobile",
+  "name": "vibedownloader-android",
   "version": "1.0.0",
   "private": true,
   "scripts": {
